@@ -107,6 +107,7 @@ rpmds rpmdsFree(/*@killref@*/ /*@only@*/ /*@null@*/ rpmds ds)
 	/*@modifies ds@*/;
 /**
  * Create and load a dependency set.
+ * @deprecated Only scareMem = 0 will be permitted.
  * @param h		header
  * @param tagN		type of dependency
  * @param scareMem	Use pointers to refcounted header memory?
