@@ -1,6 +1,7 @@
 4.3.1 -> 4.4:
 	- use package build time as EVR comparison tie breaker.
 	- fix: don't add leading space to %* argv expansion (#119059).
+	- scareMem = 0 everywhere, document deprecation phase out.
 
 4.3 -> 4.3.1:
 
